<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_planet_name_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginLeft="12dp"
            android:text="@string/planet_name_tag"
            android:textSize="24sp"
            android:textColor="#000"/>
        <TextView
            android:id="@+id/tv_planet_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginLeft="12dp"
            android:textSize="24sp"
            android:textColor="#000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_planet_climate_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginLeft="12dp"
            android:text="@string/planet_climate_tag"
            android:textSize="24sp"
            android:textColor="#000"/>
        <TextView
            android:id="@+id/tv_planet_climate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginLeft="12dp"
            android:textSize="24sp"
            android:textColor="#000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_planet_gravity_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginLeft="12dp"
            android:text="@string/planet_gravity_tag"
            android:textSize="24sp"
            android:textColor="#000"/>
        <TextView
            android:id="@+id/tv_planet_gravity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginLeft="12dp"
            android:textSize="24sp"
            android:textColor="#000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_planet_diameter_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginLeft="12dp"
            android:text="@string/planet_diameter_tag"
            android:textSize="24sp"
            android:textColor="#000"/>
        <TextView
            android:id="@+id/tv_planet_diameter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginLeft="12dp"
            android:textSize="24sp"
            android:textColor="#000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_planet_period_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginLeft="12dp"
            android:text="@string/planet_period_tag"
            android:textSize="24sp"
            android:textColor="#000"/>
        <TextView
            android:id="@+id/tv_planet_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginLeft="12dp"
            android:textSize="24sp"
            android:textColor="#000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_planet_population_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginLeft="12dp"
            android:text="@string/planet_population_tag"
            android:textSize="24sp"
            android:textColor="#000"/>
        <TextView
            android:id="@+id/tv_planet_population"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginLeft="12dp"
            android:textSize="24sp"
            android:textColor="#000"/>
    </LinearLayout>


</LinearLayout>
