<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_film_name_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginLeft="12dp"
            android:text="@string/film_name_tag"
            android:textSize="24sp"
            android:textColor="#000"/>
        <TextView
            android:id="@+id/tv_film_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginLeft="12dp"
            android:textSize="24sp"
            android:textColor="#000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_film_director_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginLeft="12dp"
            android:text="@string/film_director_tag"
            android:textSize="24sp"
            android:textColor="#000"/>
        <TextView
            android:id="@+id/tv_director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginLeft="12dp"
            android:textSize="24sp"
            android:textColor="#000"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_film_release_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginLeft="12dp"
            android:text="@string/film_release_tag"
            android:textSize="24sp"
            android:textColor="#000"/>
        <TextView
            android:id="@+id/tv_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginLeft="12dp"
            android:textSize="24sp"
            android:textColor="#000"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_film_episode_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginLeft="12dp"
            android:text="@string/film_episode_tag"
            android:textSize="24sp"
            android:textColor="#000"/>
        <TextView
            android:id="@+id/tv_episode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginLeft="12dp"
            android:textSize="24sp"
            android:textColor="#000"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_film_producer_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginLeft="12dp"
            android:text="@string/film_producer_tag"
            android:textSize="24sp"
            android:textColor="#000"/>
        <TextView
            android:id="@+id/tv_producer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginLeft="12dp"
            android:textSize="24sp"
            android:textColor="#000"/>
    </LinearLayout>


</LinearLayout>
